--- a/roles/fail2ban/tasks/main.yml
+++ b/roles/fail2ban/tasks/main.yml
@@ -3,7 +3,7 @@
   ansible.builtin.apt:
     name:
       - fail2ban
-      - python3-dnstools
+      - python3-dnspython
     state: present
 - name: fail2ban konfigurálása
   ansible.builtin.blockinfile:
